Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Wed Jul 1 16:21:00 2015 +0200

     MiniReaderAlg.h, MiniReaderJets.h, MiniReaderAlg.cxx, MiniReaderJet.cxx: Switch
     to the new histogram interface.
    
    MiniReaderJets.cxx:
    Testing the HistoBaseClass on jets, added InitJetHisto() and FillJetHisto()
    functions in the MiniReaderJets class and calling them in the MiniReaderAlg.
    
    MiniReaderAlg.cxx:
    Added a call to the new functions in the MiniReaderJets class.
    
    MiniReaderAlg.h:
    Added a typedef for a tuple to be passed as argument to the Fill functions to
    allow cross class variables for the plots.

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Wed Jul 1 16:03:43 2015 +0200

    HistoBaseClass.h, HistoBaseClass.cxx: Added a new base class for plotting
    histograms.
    
    Assed a base class with common functions to define histograms.

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Wed Jul 1 15:53:14 2015 +0200

    SensitivityCutsApplication.cxx: Changed signal sample output files name.
    
    Changed the output name of the files for the plots. Now they are more specific
    to the cinematic of the process.

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Wed Jul 1 15:10:03 2015 +0200

    sendTMVA.sh: Changed to run on the new signal samples with all backgrounds.
    
    Added bash arrays to handle multiple backgrounds and corrected the root names
    for the new signal samples.

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Mon Jun 29 16:17:32 2015 +0200

	NminOnePlot.cxx: Fixed THStack plotting problem.

	THStack not needed because the background samples are already
	merged with hadd. Added the missing ET plot with the cut suggested
	by TMVA for the jet1_pt and the n_jet variable.

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Mon Jun 29 14:11:43 2015 +0000

	MiniReaderAlg.h, MiniReaderAlg.cxx, runMiniReader.cxx, runSensitivityTMVA.cxx,
	sendTMVA.sh: Modified to run on the new data sets.
